--- a/sale_order_line_sequence/views/report_saleorder.xml
+++ b/sale_order_line_sequence/views/report_saleorder.xml
@@ -2,7 +2,7 @@
 <odoo>
     <template id="report_saleorder_document_sequence" inherit_id="sale.report_saleorder_document">
         <xpath expr="//table[@class='table table-condensed']/thead/tr/th[1]" position="before">
-            <th><strong>Sequence</strong></th>
+            <th><strong>Nro</strong></th>
         </xpath>
         <xpath expr="//table[@class='table table-condensed']/tbody[@class='sale_tbody']/t[1]/t[2]/tr[1]/td[1]" position="before">
              <td>
